# mm-live

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: collect_and_test_edge.py  run_benchmark.py
src/mm_live/: __init__.py
src/mm_live/analytics/: __init__.py  capital_efficiency.py  metrics.py  pnl.py
src/mm_live/core/: __init__.py  engine.py  events.py  latency.py
src/mm_live/execution/: __init__.py  binance_client.py  connection_pool.py  order_manager.py  quote_throttle.py  rate_limiter.py  simulator.py  user_stream.py
src/mm_live/feed/: __init__.py  binance_ws.py  okx_ws.py  orderbook.py  unified_book.py
src/mm_live/research/: __init__.py  benchmark.py  imbalance_prediction.py  markout.py  multi_asset.py  regime_attribution.py  stress_test.py
src/mm_live/risk/: __init__.py  audit_risk.py  limits.py  live_audit_loop.py
src/mm_live/signals/: __init__.py  composite.py  fair_value.py  imbalance.py  microprice.py  vol_clustering.py  volatility.py
src/mm_live/strategy/: __init__.py  cross_venue.py  fair_value.py  quotes.py  quoting.py  vol_estimator.py
tests/: conftest.py  test_audit_risk.py  test_binance_client.py  test_capital_efficiency.py  test_cross_venue.py  test_engine.py  test_latency.py  test_live_audit_loop.py  test_multi_asset.py  test_okx_feed.py  test_order_manager.py  test_quote_throttle.py  test_rate_limiter.py  test_research.py  test_stress_test.py  test_unified_book.py  test_user_stream.py
