[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mm-live"
version = "0.1.0"
description = "Real-time market making system: live feed, Kalman fair value, EWMA vol, Avellaneda-Stoikov quotes"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ali Pourrahim"}]

dependencies = [
    "websockets>=12.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "orjson>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N806",   # uppercase variable in function (K, T are standard math notation)
    "N803",   # uppercase argument name (T_horizon is Avellaneda-Stoikov convention)
    "E741",   # ambiguous variable name (l is common in math)
    "B905",   # zip() without strict= (not needed for internal helpers)
    "B904",   # raise from err in except (test helper, not production code)
    "F841",   # local variable assigned but never used (will fix case-by-case)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
